# fake-news-detector-ja

./: .gitignore  README.md  config.py  hello.py  pyproject.toml
src/: consts.py  evaluate.py  prepare_data.py  split_data.py  train.py  utils.py
test/: test_finetune_evaluate.py  test_finetune_train.py  test_pipeline.py  test_pretune_evaluate.py  test_pretune_train.py
test/helpers/: script_runner.py
