[project]
name = "fake-news-detector-ja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.5.1",
    "fugashi>=1.4.0",
    "ipadic>=1.0.0",
    "pandas>=2.2.3",
    "protobuf>=6.31.0",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
